fix project alignement

--- a/styles/pages/_homepage.module.scss
+++ b/styles/pages/_homepage.module.scss
@@ -51,5 +51,5 @@
   height: calc(100% + 5rem);
   object-fit: cover;
   object-position: center top;
-  filter: grayscale(80%);
+  filter: grayscale(100%);
 }
